--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -314,10 +314,10 @@
                   </a>
                   <div [ngClass]="{'collapse': isCollapsed['typeSub']}" id="typeSub">
                     <ul class="nav nav-collapse sub-nav">
-                      <li><a routerLink=""><span class="sub-item">فئة المستودعات</span></a></li>
-                      <li><a routerLink=""><span class="sub-item">المستودعات</span></a></li>
-                      <li><a routerLink="#"><span class="sub-item">أماكن التخزين</span></a></li>
-                      <li><a routerLink="/"><span class="sub-item">النقل بين المستودعات</span></a></li>
+                      <li><a routerLink="/storehouseCategory"><span class="sub-item">فئة المستودعات</span></a></li>
+                      <li><a routerLink="/storehouse"><span class="sub-item">المستودعات</span></a></li>
+                      <li><a routerLink="/storage"><span class="sub-item">أماكن التخزين</span></a></li>
+                      <li><a routerLink="/transportation"><span class="sub-item">النقل بين المستودعات</span></a></li>
                       <li><a routerLink="/"><span class="sub-item">جرد المستودع</span></a></li>
                       <li><a routerLink="/"><span class="sub-item">تقارير المستودعات</span></a></li>
                     </ul>
